# py-web-07

./: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 4c2444102854_initial_migration.py
